# pdf_cleanup_agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  agent.py  agent_stream.py  build_and_test.py  build_local.sh  build_test_config.yml  clean_portable.py  create_portable.bat  data-order.yml  fix_console_encoding.py  fix_unicode_chars.py  hello_world.py  main.py  migrate_config.py  pdf-power-converter-simple.spec  pdf-power-converter.spec  pdf_cleanup_agent.spec  pdf_segmenter.py  pipeline_config.yml  pipeline_config.yml.backup  portable_setup.py  prompt.txt  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  run_tests.py  setup.py  test_build.sh  test_portable.py  test_ui.py
.github/workflows/: build-and-test.yml  build-release.yml  test.yml
data/json/: fvtt-JournalEntry-heading.json
data/markdown/: .gitkeep
data/output/: .gitkeep
data/pdf/: .gitkeep
data/txt_input/: .gitkeep  Chater 2
data/yml/: example-data-order.yml
prompts/: parse_character_sheets  parse_pdf_text  parse_scenario_text
scripts/: agent.py  agent_stream.py  fix_order_yml_filenames.py  hello_world.py  markdown_to_fvtt.py  model_selector.py  model_selector_cli_demo.py  pdf_process_pipeline.py  pdf_segmenter.py  post_processing.py  post_processing_formatting.py  postprocess_pipeline.py  regenerate_order.py  reprocess_markdown_with_llm.py  run_pipeline.py  run_post_processing.py
scripts/pdf_power_converter.egg-info/: PKG-INFO
scripts/tests/: __init__.py  demo_progress_status.py  example_stream.py  run_tests.py  test_config.py  test_config_integration.py  test_hello_world.py  test_pdf_drop_widget.py  test_pdf_handler.py  test_process_handler.py  test_process_integration.py  test_progress_status_integration.py  test_task_11_requirements.py
scripts/ui/: __init__.py  app_controller.py  main.py  pdf_power_converter.py  ui_pyqt.py
scripts/ui/components/: __init__.py  base_component.py  left_panel.py  main_window.py  pdf_drop_widget.py  progress_widgets.py  right_panel.py
scripts/ui/dialogs/: __init__.py  base_dialog.py
scripts/ui/handlers/: __init__.py  base_handler.py  file_handler.py  pdf_handler.py  process_handler.py
scripts/ui/styles/: __init__.py  app_styles.py
scripts/ui/utils/: __init__.py  config.py  config_example.py  paths.py  status_manager.py  ui_helpers.py
tests/: test_agent.py  test_agent_stream.py  test_pdf_segmenter.py
